// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly default unit is inches 1`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Offset Distance
        <span
          class="value"
        >
          3.937"
        </span>
      </p>
      <div
        class="tool-panel-body"
      >
        <div>
          <div
            class="control offset-dist"
          >
            <div>
              mock-unit-input min:
              0
              unit:
              mm
              defaultValue:
              100
              <input
                class="unit-input"
              />
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly default unit is inches 2`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Offset Distance
        <span
          class="value"
        >
          3.937"
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div>
          <div
            class="control offset-dist"
          >
            <div>
              mock-unit-input min:
              0
              unit:
              mm
              defaultValue:
              100
              <input
                class="unit-input"
              />
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly default unit is inches 3`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Offset Distance
        <span
          class="value"
        >
          1.969"
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div>
          <div
            class="control offset-dist"
          >
            <div>
              mock-unit-input min:
              0
              unit:
              mm
              defaultValue:
              50
              <input
                class="unit-input"
              />
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly default unit is mm 1`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Offset Distance
        <span
          class="value"
        >
          100 mm
        </span>
      </p>
      <div
        class="tool-panel-body"
      >
        <div>
          <div
            class="control offset-dist"
          >
            <div>
              mock-unit-input min:
              0
              unit:
              mm
              defaultValue:
              100
              <input
                class="unit-input"
              />
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly default unit is mm 2`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Offset Distance
        <span
          class="value"
        >
          100 mm
        </span>
      </p>
      <div
        class="tool-panel-body"
      >
        <div>
          <div
            class="control offset-dist"
          >
            <div>
              mock-unit-input min:
              0
              unit:
              mm
              defaultValue:
              100
              <input
                class="unit-input"
              />
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
